--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.17.1",
-        "hbs": "^4.1.2"
+        "hbs": "^4.1.2",
+        "pg": "^8.6.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
