--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "dev": "nodemon server.js"
+        "start": "node server.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "nodemon": "nodemon server.js"
     },
     "author": "",
     "license": "ISC",
