--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js",
-        "nodemon": "nodemon server.js"
+        "dev": "nodemon server.js"
     },
     "author": "",
     "license": "ISC",
