--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
+        "fs": "0.0.1-security",
         "hbs": "^4.1.2",
+        "mime-types": "^2.1.31",
+        "multer": "^1.4.2",
         "pg": "^8.6.0"
     },
     "devDependencies": {
