--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "fs": "0.0.1-security",
         "hbs": "^4.1.2",
         "mime-types": "^2.1.31",
+        "moment": "^2.29.1",
         "multer": "^1.4.2",
         "pg": "^8.6.0"
     },
