--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.21.1",
         "bcryptjs": "^2.4.3",
         "date-and-time": "^1.0.1",
         "dotenv": "^10.0.0",
