--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     },
     "main": "app.js",
     "scripts": {
-        "start": "node server.js",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "nodemon": "nodemon server.js"
+        "start": "nodemon server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
