--- a/.github/workflows/main_invirtual.yml
+++ b/.github/workflows/main_invirtual.yml
@@ -17,9 +17,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '16.17.0'
 
       - name: npm install, build, and test
         run: |
