--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     },
     "main": "app.js",
     "scripts": {
-        "start": "nodemon server.js",
+        "start": "nodemon app.js",
+        "dev": "nodemon app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "fonsiher",
     "license": "ISC",
     "dependencies": {
         "axios": "^0.21.1",
-        "bcryptjs": "^2.4.3",
         "date-and-time": "^1.0.1",
-        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
         "fs": "0.0.1-security",
@@ -24,9 +23,7 @@
         "mime-types": "^2.1.31",
         "moment": "^2.29.1",
         "multer": "^1.4.2",
-        "node-fetch": "^2.6.1",
-        "pg": "^8.6.0",
-        "wavi": "^2.1.3"
+        "pg": "^8.6.0"
     },
     "devDependencies": {
         "arkit": "^1.6.4",
