--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     },
     "main": "app.js",
     "scripts": {
-        "start": "nodemon app.js",
-        "dev": "nodemon app.js"
+        "start": "node app.js",
+        "dev": "node app.js"
     },
     "author": "fonsiher",
     "license": "ISC",
